1850-activity-data-backend: refator code and make iri and values to a class